--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,9 @@
 PORT=5000
-DB_HOST=localhost
+DB_HOST=ballast.proxy.rlwy.net
 DB_USER=root
-DB_PASSWORD=MinhaZ,MinhaZ,039
-DB_NAME=portfolio_db
+DB_PASSWORD=jvCiIobBrwqTYRHcRcmiBuxcusEFSnlY
+DB_NAME=railway
 EMAIL_USER=minhazreza3243@gmail.com
 EMAIL_PASS=vnltghusebycfmux
+DB_PORT=46867
+
